--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
-spring.application.name=Authors
+spring.application.name=Events
 
-spring.datasource.url=jdbc:h2:file:./data/authors;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/Events
+spring.datasource.username=user
+spring.datasource.password=123
 
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.path=/h2-console
 
-spring.sql.init.platform=h2
-spring.sql.init.mode=always
-
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
+# File Upload Configuration
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+
+# Optional: Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
