--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,13 @@ dependencies {
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
+
+	// testing support
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.junit.jupiter:junit-jupiter:5.11.0"
+	testImplementation "org.junit.platform:junit-platform-suite:1.14.0"
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
