Backend für User funktioniert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.servlet.multipart.max-request-size=-1
 # Optional: Connection Pool Configuration
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
+
+#Deactivate Security Login
+spring.security.user.name=disabled
+spring.security.user.password=disabled
