--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.datasource.hikari.minimum-idle=5
 #Deactivate Security Login
 spring.security.user.name=disabled
 spring.security.user.password=disabled
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
