--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  app:
+    build: .
+    container_name: Everout
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/Events
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=123
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
   postgres:
     image: postgres:16-alpine
     container_name: Events
