--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ pool:
 variables:
   imageName: 'everout'
   registryUrl: 'localhost:5000'
+  imageTag: '$(Build.BuildId)'
 
 stages:
   - stage: BuildAndDeploy
